--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="modal"></div>
-<<<<<<< HEAD
-    <div id="modalSH"></div>
-=======
-
+    <div id="modalPlaylist"></div>
     <div id="player"></div>
->>>>>>> 0bd4a58d119931c7d8172b9da427760b7e6fa348
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
