--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="Rokker"
       content="Music application for those who rokk the world. Be yourself and play it on."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Rkr-black.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
